--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/BattleSample/BattleMap.BattleMap
 GlobalDefaultGameMode=/Game/BulePrint/GM_base.GM_base_C
+EditorStartupMap=/Game/BattleSample/BattleMap.BattleMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
