--- a/Metaverse_Test.uproject
+++ b/Metaverse_Test.uproject
@@ -37,6 +37,11 @@
 				"Win64",
 				"Android"
 			]
+		},
+		{
+			"Name": "PaperZD",
+			"Enabled": true,
+			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/c4b43502026047d89296cd7bffd92828"
 		}
 	]
 }
