--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+Metaverse_Test[[:space:]](1) filter=lfs diff=lfs merge=lfs -text
