--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 * text=auto
 Metaverse_Test[[:space:]](1) filter=lfs diff=lfs merge=lfs -text
 Meatverse_Test(1) filter=lfs diff=lfs merge=lfs -text
+Metaverse_Test0927 filter=lfs diff=lfs merge=lfs -text
